--- a/application/pipacker/view/common/show_img_list.html
+++ b/application/pipacker/view/common/show_img_list.html
@@ -18,39 +18,39 @@
 	<div role="tabpanel" class="tab-pane" id="tab3">
 		<div class="followers row" style="padding: 0 200px; margin-top: 80px; overflow: hidden; margin-bottom: 50px;">
 			<div class="col-md-4" style="margin-bottom: 30px;">
-				<img src="__PUBLIC_PIPACKER__/pipacker/images/29.jpg" width="160" height="160">
+				<img src="" width="160" height="160">
 				<p style="color: #ddd; font-size: 22px; font-family: '宋体'; padding-top: 10px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%;">傻子</p>
 			</div>
 			<div class="col-md-4" style="margin-bottom: 30px;">
-				<img src="__PUBLIC_PIPACKER__/pipacker/images/29.jpg" width="160" height="160">
+				<img src="" width="160" height="160">
 				<p style="color: #ddd; font-size: 22px; font-family: '宋体'; padding-top: 10px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%;">白痴</p>
 			</div>
 			<div class="col-md-4" style="margin-bottom: 30px;">
-				<img src="__PUBLIC_PIPACKER__/pipacker/images/29.jpg" width="160" height="160">
+				<img src="" width="160" height="160">
 				<p style="color: #ddd; font-size: 22px; font-family: '宋体'; padding-top: 10px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%;">智障</p>
 			</div>
 			<div class="col-md-4" style="margin-bottom: 30px;">
-				<img src="__PUBLIC_PIPACKER__/pipacker/images/29.jpg" width="160" height="160">
+				<img src="" width="160" height="160">
 				<p style="color: #ddd; font-size: 22px; font-family: '宋体'; padding-top: 10px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%;">(╯‵□′)╯炸弹！•••*～●</p>
 			</div>
 			<div class="col-md-4" style="margin-bottom: 30px;">
-				<img src="__PUBLIC_PIPACKER__/pipacker/images/29.jpg" width="160" height="160">
+				<img src="" width="160" height="160">
 				<p style="color: #ddd; font-size: 22px; font-family: '宋体'; padding-top: 10px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%;">全军出击(((ꎤ'ω')و三 ꎤ'ω')-o≡</p>
 			</div>
 			<div class="col-md-4" style="margin-bottom: 30px;">
-				<img src="__PUBLIC_PIPACKER__/pipacker/images/29.jpg" width="160" height="160">
+				<img src="" width="160" height="160">
 				<p style="color: #ddd; font-size: 22px; font-family: '宋体'; padding-top: 10px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%;">发起进攻(　 ´-ω ･)▄︻┻┳══━一</p>
 			</div>
 			<div class="col-md-4" style="margin-bottom: 30px;">
-				<img src="__PUBLIC_PIPACKER__/pipacker/images/29.jpg" width="160" height="160">
+				<img src="" width="160" height="160">
 				<p style="color: #ddd; font-size: 22px; font-family: '宋体'; padding-top: 10px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%;">ԅ(≖‿≖ԅ)咩咩咩流氓</p>
 			</div>
 			<div class="col-md-4" style="margin-bottom: 30px;">
-				<img src="__PUBLIC_PIPACKER__/pipacker/images/29.jpg" width="160" height="160">
+				<img src="" width="160" height="160">
 				<p style="color: #ddd; font-size: 22px; font-family: '宋体'; padding-top: 10px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%;">|ω･`)暗中观察</p>
 			</div>
 			<div class="col-md-4" style="margin-bottom: 30px;">
-				<img src="__PUBLIC_PIPACKER__/pipacker/images/29.jpg" width="160" height="160">
+				<img src="" width="160" height="160">
 				<p style="color: #ddd; font-size: 22px; font-family: '宋体'; padding-top: 10px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%;">(ꈍεꈍ (ꈍ□ꈍ (ꈍㅿꈍ (ꈍ罒ꈍ﹡)</p>
 			</div>
 		</div>
@@ -82,7 +82,7 @@
 		        <div class="comment_connent">
 			        <div class="media">
 			            <div class="media-left">
-			                <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt="">
+			                <img class="media-object" src="" alt="">
 			            </div>
 			            <div class="media-body">
 				            <h4 class="media-heading">Media heading<span style="font-size: 12px; color: #555; vertical-align: text-top; display: inline-block;position: absolute; right: 10px;">30分钟前</span></h4>
@@ -93,7 +93,7 @@
 		        <div class="comment_connent">
 		          <div class="media">
 		            <div class="media-left">
-		                <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt="">
+		                <img class="media-object" src="" alt="">
 		            </div>
 		            <div class="media-body">
 		              <h4 class="media-heading">Media heading<span style="font-size: 12px; color: #555; vertical-align: text-top; display: inline-block;position: absolute; right: 10px;">30分钟前</span></h4>
@@ -104,7 +104,7 @@
 		        <div class="comment_connent">
 		          <div class="media">
 		            <div class="media-left">
-		                <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt="">
+		                <img class="media-object" src="" alt="">
 		            </div>
 		            <div class="media-body">
 		              <h4 class="media-heading">Media heading<span style="font-size: 12px; color: #555; vertical-align: text-top; display: inline-block;position: absolute; right: 10px;">30分钟前</span></h4>
@@ -115,7 +115,7 @@
 		        <div class="comment_connent">
 		          <div class="media">
 		            <div class="media-left">
-		                <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt="">
+		                <img class="media-object" src="" alt="">
 		            </div>
 		            <div class="media-body">
 		              <h4 class="media-heading">Media heading<span style="font-size: 12px; color: #555; vertical-align: text-top; display: inline-block;position: absolute; right: 10px;">30分钟前</span></h4>
