--- a/application/pipacker/view/release/index.html
+++ b/application/pipacker/view/release/index.html
@@ -184,7 +184,7 @@
 	</script>
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/jquery-1.11.1.min.js"></script>
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/bootstrap.min.js"></script>
-	<script src="__PUBLIC_PIPACKER__/pipacker/js/release.js?4"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/js/release.js"></script>
 	<script src="__PUBLIC_PIPACKER__/pipacker/js/user.js?1"></script>
 	<script type="text/javascript">
 	//下面用于多图片上传预览功能
