--- a/application/pipacker/view/prints/index.html
+++ b/application/pipacker/view/prints/index.html
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" href="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/css/bootstrap.min.css">
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/jquery-1.11.1.min.js"></script>
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/bootstrap.min.js"></script>
-	<script src="__PUBLIC_PIPACKER__/pipacker/js/works.js"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/js/works.js?1"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/js/user.js"></script>
 	<style>
 		body{
 			background: #e9e9e9;
@@ -102,9 +103,8 @@
 			top:-50%;
 			margin-top:55%;
 			font-size: 30px;
-			font-size: 100;
 			cursor: pointer;
-			color:#fff;
+			color:#aeaeae;
 	    }
 	    .next_btn{
 	    	right: 0;
@@ -169,7 +169,7 @@
 			font-size: 16px;
 		}
 		.buy_left table tr td {
-			width: 100px;
+			width: 120px;
 			color: #999;
 		}
 		.buy_left h2 {
@@ -238,6 +238,10 @@
 		    letter-spacing: 1px;
 		    cursor: pointer;
 		}
+		.buy_right p img {
+			width: 107px;
+			height: 25px;
+		}
 	</style>
 </head>
 <body>
@@ -254,7 +258,7 @@
 		<img src="__PUBLIC_PIPACKER__/pipacker/images/cover5.jpg" alt="">
 	</div>
 	<div class="show_content">
-		<ul>
+		<ul class="show_img_ul">
 			{foreach $pp_list as $key=>$item}
 			<li class="show_content_img">
 				<a href="#browse_modal" data-toggle="modal"><img src="{$item['works_src']}" data-pid="{$item['works_id']}" data-id="{$key}" alt="" class="show_content_small_img"></a>
@@ -270,7 +274,7 @@
 			<div class="modal-content">
 					<div class="browse_big_img">
 			            <div class="swiper-slide">
-			           		<img src="" class="show_content_small_img">
+			           		<img src="" data_id="" class="show_content_big_img">
 		           		</div>
 			           <span class="pre_btn hf_btn glyphicon glyphicon-chevron-left"></span>
 			           <span class="next_btn hf_btn glyphicon glyphicon-chevron-right"></span>
@@ -285,7 +289,7 @@
 								<button class="btn btn-success" style="width: 90%;" data-toggle="modal" data-target="#buy_modal" data-dismiss="modal">买买买</button>
 								<br>
 								<br>
-								<button class="btn btn-default" style="width: 90%;">添加到收藏夹</button>
+								<!-- <button class="btn btn-default" style="width: 90%;">添加到收藏夹</button> -->
 							</div>
 						</div>
 					</div>
@@ -298,7 +302,7 @@
 	    <div class="modal-content" style="overflow: auto;">
 	    	<div class="modal-body">
 	        	<div class="buy_left">
-	        		<h1>我要买它</h1>
+	        		<h1>我要买</h1>
 	        		<img class="s_img" src="{$item['works_src']}">
 	        		<table>
 	        			<tr>
@@ -317,22 +321,24 @@
 	        		<h2>选择规格</h2>
 	        		<div class="set_format">
 	        			<p>
-	        				<input type="radio" class="pay_radio" id="sm_format" name="format" checked><label for="sm_format"><span class="format_sz">10×10</span><strong>￥<span class="pay_num">100</span></strong></label>
+	        				<input type="radio" class="pay_radio" id="md_format" name="format" checked><label for="md_format"><span class="format_sz">4:3</span><strong>￥<span class="pay_num">149</span></strong></label>
 	        			</p>
 	        			<p>
-	        				<input type="radio" class="pay_radio" id="md_format" name="format"><label for="md_format"><span class="format_sz">100×100</span><strong>￥<span class="pay_num">1000</span></strong></label>
+	        				<input type="radio" class="pay_radio" id="lg_format" name="format"><label for="lg_format"><span class="format_sz">16:9</span><strong>￥<span class="pay_num">199</span></strong></label>
 	        			</p>
-	        			<p>
-	        				<input type="radio" class="pay_radio" id="lg_format" name="format"><label for="lg_format"><span class="format_sz">1000×1000</span><strong>￥<span class="pay_num">10000</span></strong></label>
-	        			</p>
+	        			<!-- <p>
+	        				<input type="radio" class="pay_radio" id="dz_format" name="format"><label for="dz_format"><span class="format_sz">定制(请联系客服)</span><strong>￥<span class="pay_num">399.00</span></strong></label>
+	        			</p> -->
         				<p style="padding-bottom: 5px;">免运费</p>
 	        		</div>
 	        	</div>
 	        	<div class="buy_right">
 	        		<h2>付款</h2>
 	        		<p>收货地址</p>
-	        		<textarea></textarea>
-	        		<p>付款方式</p>
+	        		<textarea class="user_address" style="display: block; margin-bottom: 8px;" placeholder="请输入你的地址"></textarea>
+	        		<span>联系电话</span>
+	        		<input type="text" name="" class="user_tel" placeholder="请输入收货电话号码">
+	        		<p style="margin-top: 8px;">付款方式</p>
 	        		<p>
 	        			<select class="pay_type">  
 							<option value ="微信支付">微信支付</option>  
@@ -341,7 +347,7 @@
 						<img src="__PUBLIC_PIPACKER__/pipacker/images/weixinzhifu.jpg">
 						<img src="__PUBLIC_PIPACKER__/pipacker/images/zhifubao.jpg">
 	        		</p>
-					<button class="btn btn-success btn-lg pay_money" style="margin-right: 15px;">付款￥1000</button>
+					<button class="btn btn-success btn-lg pay_money" id="pay_money" style="margin-right: 15px;">付款￥<span class="pay_money_num"></span></button>
 					<button class="btn btn-default btn-lg" style="color: #fff; background: #444;" data-dismiss="modal">我不想买了</button>
 	        	</div>
 	    	</div>
@@ -434,7 +440,7 @@
 	// 			});
 	// 		 }
 	// });
-
+	// console.log(datapp);
 	$(function(){
 		var page = 1;
 		var more_lock = true;
@@ -443,6 +449,8 @@
         var $browse_img = $('.browse_big_img');
         var $works_tags = $('.tags');
         var $user_name = $('#author');
+        var $data_id = 0;
+        var data_id_new = $(".show_content_small_img").length-1;
         $.ajax({
           url: "{:url('/qworks/Apic')}",
           type: 'get',
@@ -460,19 +468,27 @@
 				var $val = this_elm.attr('src');
 				var index = this_elm.attr('data-id');
 				pic_id = this_elm.attr('data-pid');
-				console.log(datapp[index]);
+				// console.log(datapp[index]);
 				$browse_img.find('img').attr('src',$val);
 				var  str = '';
 				for(var i=0;i<datapp[index].works_tags.length;i++){
-					str += "<span> #"+datapp[index].works_tags[i]+"</span>";
+					str += "<span>"+datapp[index].works_tags[i]+"</span>";
 				}
 				$(".tags").html($(str));
 				$(".pic_title").text(datapp[index].works_title);
 				$("#author").text(datapp[index].user_name);
-				$(".s_img").attr("src", datapp[index].works_src);
+				$(".s_img").attr("src", $(".show_content_big_img").attr("src"));
+				$(".s_img").attr("data_id", datapp[index].works_id);
 				$("#works_id").text(datapp[index].works_id);
 				$("#works_title").text(datapp[index].works_title);
 				$("#user_name").text(datapp[index].user_name);
+
+				browse_img_btn.pre_lock = true;
+  				browse_img_btn.next_lock = true;
+  				browse_img_btn.data.works_id = pic_id;
+  				browse_img_btn.data.data_id = index;
+  				browse_img_btn.ew = 0;
+  				// console.log(browse_img_btn)
 				more_lock = true;
 				$(".more").text("发现更多");
         	}
@@ -483,61 +499,80 @@
       		"thumbnails":$thumbnails,//图片简介
       		"user_name":$user_name,//图片简介
       		"tags":$works_tags,//图片简介
+      		"data_id":$data_id,//图片简介
           	"works_id":works_id//当前图片id
         };
         var browse_img_btn = new browse_img_hf(data);//新建
         browse_img_btn.init();//初始化
 
-
-        $(".more").on('click',function(){
-			page++;
-			// console.log(page);
-			if(more_lock){
-				$.ajax({
-					url:"{:url('/qworks/Apic')}",
-					type:"get",
-					data:{"page":page},
-					success:function(data){
-						if(!$.isEmptyObject(data)){
-							redata = $.parseJSON(data);
-							var str = '';
-							if(0==redata.status){
-								for(var i=0;i<redata.rearray.length;i++){
-								str+='<li class="show_content_img"><a href="javascript:;">'+
-								 '<img src="'+redata.rearray[i].works_src+'" class="m_img" data-id="'+redata.rearray[i].works_id+'">'+
-								 '<p>© '+redata.rearray[i].user_name+'</p></a></li>';
-								}
-								$show_img_list.find(".show_img_ul").append($(str));
-							}else{
-								more_lock = false;
-								$(".more").text("没有啦");
-							}
-						}
-					}
-				});
-			}else{
-				$(".more").text("没有啦");
-			}
-		});
+        pay_money_chg();
+		pay_price();
+        
 
 		function pay_money_chg() {
 			$(".pay_radio").each( function(index, el) {
 				if ($(el).attr("checked")=="checked") {
 					var pay_num = $(this).parent().find(".pay_num").text();
-					$(".pay_money").text("付款￥"+pay_num);
+					// $(".pay_money").text("付款￥"+pay_num);
+					$(".pay_money_num").text(pay_num);
 				}
 			});
 			$(".set_format").on("click",function() {
 				$(".pay_radio").each( function(index, el) {
 					if ($(el).prop("checked")==true) {
 						var pay_num = $(this).parent().find(".pay_num").text();
-						$(".pay_money").text("付款￥"+pay_num);
+						// $(".pay_money").text("付款￥"+pay_num);
+						$(".pay_money_num").text(pay_num);
 					}
 				})
 			})
-			// console.log($(".pay_radio"));
 		}
-		pay_money_chg();
+		function pay_price() {
+			$("#pay_money").on("click", function() {
+				var $user_address = $(".user_address").val();
+				var $user_tel = $(".user_tel").val();
+				if (typeof($user_address)!='undefined' && typeof($user_address)!='undefined') {
+					if (""!=$user_address && ""!=$user_tel) {
+						if (/^1[34578]\d{9}$/.test($user_tel)) {
+							var $user_name = localStorage.getItem('user_name');
+							var $works_id = localStorage.getItem('apic_id');	
+							var $works_price = $(".pay_money_num").text();
+							console.log(localStorage)
+							var data = {
+								"user_address":$user_address,
+								"user_tel":$user_tel,
+								"user_name":$user_name,
+								"works_price":$works_price,
+								"works_id":$works_id
+							};
+							console.log(data)
+							$.post("{:url('/carts')}",data,function(data) {
+								if (!$.isEmptyObject(data)) {
+									var redata = $.parseJSON(data);
+									if (1 == redata.status) {
+										$("#buy_modal").modal('hide');
+										$(".modal-backdrop").hide();
+										$(".user_address").val("");
+										$(".user_tel").val("");
+										alert("支付成功");
+									} else if (0 == redata.status) {
+										alert("支付失败");
+									}
+								}
+							})
+						} else {
+							alert("请输入正确的电话号码");
+						}
+					}
+					else {
+						alert("收货地址或电话号码不能为空");
+					}
+				} else {
+					alert("未知错误");
+				}
+			})
+		}
+		
     });
        
 	// });
