--- a/application/pipacker/view/mainpage/index.html
+++ b/application/pipacker/view/mainpage/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -128,7 +128,7 @@
 	        column-count:4;
 	        -moz-column-gap: 1em;
 	        -webkit-column-gap: 1em;
-	        column-gap: 1em;+
+	        column-gap: 1em;
 		}
 		.show_img_box{
 			padding: 15px 0 0 15px;
@@ -177,13 +177,13 @@
 	<div class="container">
 		<div class="head_img">
 			<div class="header_img">
-				<a href="{:url('dialogue/index')}">
+				<a href="">
 					<img src="__PUBLIC_PIPACKER__/pipacker/images/cover5.jpg" class="imgwidth">
 				</a>
 				<p class="header_author">© Yucel Basoglu</p>
 			</div>
 			<div class="header_text">
-				<a href="{:url('dialogue/index')}">
+				<a href="">
 					<span class="header_text_left">杂志</span>
 					&nbsp;&nbsp;
 					<span class="header_text_right">Yucel Basoglu:鼓舞人心的BW海景摄影师</span>
@@ -212,7 +212,7 @@
                                         <span class="modal_tip_aaa">
                                             标签：
                                             {foreach $val.works_tags as $tags}
-                                            <a href="#" class="modal_tip_aaa">{$tags} </a>
+                                            <a href="#" class="modal_tip_aaa">#{$tags} </a>
                                             {/foreach}
                                         </span>
                                         <br>
@@ -253,7 +253,7 @@
 		var more_lock = true;
 		var url = "{:url('/qworks/Hot')}";
         var $show_img_list = $(".show_img_list");
-        var search_data = {};
+        var search_data = { "page": page};
 
 
 		$show_img_list.on("click",function(el){
@@ -302,43 +302,6 @@
 		});
 		var $nav_main_btn = $(".nav_main_btn");
 		// console.log($nav_main_btn);
-		$nav_main_btn.eq(2).on("click",function(){
-			page=1;
-			// console.log($show_img_list.find(".show_img_content").eq(1).html());
-			if($show_img_list.find(".show_img_content").eq(2).html()!=''){
-				$.get("{:url('/works')}",{page:page}).done(function(data){
-					if(!$.isEmptyObject(data)){
-							redata = $.parseJSON(data);
-							console.log(redata.rearray);
-							var str = '';
-							for(var i=0;i<redata.rearray.length;i++){
-                                str += '<div class="show_img_box">' +
-                                    '<div class="show_content_img">' +
-                                    '<div class="pic_div">' +
-                                    '<img src="' + redata.rearray[i].works_src + '" data-id="' + redata.rearray[i].works_id + '" class="m_img"/>' +
-                                    '<div class="modal_tip">' +
-                                    '<h5 class="modal_tip_aaa">标题：' + redata.rearray[i].works_title + '</h5>' +
-                                    '<span class="modal_tip_aaa">';
-                                    for(var j=0; j < redata.rearray[i].works_tags.length;j++){
-                                        str += '<a href="#" class="modal_tip_aaa">' + redata.rearray[i].works_tags[j]+' </a>';
-                                    }
-                                     str+= '</span><br><br><span class="modal_tip_aaa">浏览量：' + redata.rearray[i].works_browse + '</span>' +
-									 '</div>'+
-									 '</div>'+									 
-									 '<p>© '+redata.rearray[i].user_name+'</p>'+
-									 '</div>'+
-									 '</div>';	
-							}
-							$show_img_list.find(".show_img_content").eq(2).html($(str));
-                            url = "{:url('/works')}";
-                            search_data = { "page": page };
-							more_lock = true;
-							$(".more").text("发现更多");
-						}
-				});
-			}
-			
-		});
 		$nav_main_btn.eq(1).on("click",function(){
 			page=1;
 			// console.log($show_img_list.find(".show_img_content").eq(1).html());
@@ -354,7 +317,7 @@
                                     '<img src="' + redata.rearray[i].works_src + '" data-id="' + redata.rearray[i].works_id + '" class="m_img"/>' +
                                     '<div class="modal_tip">' +
                                     '<h5 class="modal_tip_aaa">标题：' + redata.rearray[i].works_title + '</h5>' +
-                                    '<span class="modal_tip_aaa">';
+                                    '<span class="modal_tip_aaa">标签：';
                                     for(var j=0; j < redata.rearray[i].works_tags.length;j++){
                                         str += '<a href="#" class="modal_tip_aaa">' + redata.rearray[i].works_tags[j]+' </a>';
                                     }
@@ -389,7 +352,7 @@
 									 '<img src="'+redata.rearray[i].works_src+'" data-id="'+redata.rearray[i].works_id+'" class="m_img"/>'+
 									 '<div class="modal_tip">'+
                                      '<h5 class="modal_tip_aaa">标题：' + redata.rearray[i].works_title+'</h5>' +
-                                     '<span class="modal_tip_aaa">';
+                                     '<span class="modal_tip_aaa">标签：';
                                      for (var j=0; j < redata.rearray[i].works_tags.length; j++) {
                                         str += '<a href="#" class="modal_tip_aaa">' + redata.rearray[i].works_tags[j] + ' </a>';
                                      }
@@ -412,8 +375,7 @@
 		});
 		//点击加载更多
 		$(".more").on('click',function(){
-			page++;
-			search_data = { "page": page };
+			console.log(search_data.page++);
 			// console.log(page);
 			if(more_lock){
 				$.ajax({
@@ -433,7 +395,7 @@
 									 '<img src="'+redata.rearray[i].works_src+'" data-id="'+redata.rearray[i].works_id+'" class="m_img"/>'+
 									 '<div class="modal_tip">'+
                                      '<h5 class="modal_tip_aaa">标题：' + redata.rearray[i].works_title + '</h5>' +
-                                     '<span class="modal_tip_aaa">';
+                                     '<span class="modal_tip_aaa">标签：';
                                      for (var j=0; j < redata.rearray[i].works_tags.length; j++) {
                                         str += '<a href="#" class="modal_tip_aaa">' + redata.rearray[i].works_tags[j] + ' </a>';
                                      }
@@ -478,9 +440,9 @@
                                 '<img src="' + redata[i].works_src + '" data-id="' + redata[i].works_id + '" class="m_img"/>' +
                                 '<div class="modal_tip">' +
                                 '<h5 class="modal_tip_aaa">标题：' + redata[i].works_title + '</h5>' +
-                                '<span class="modal_tip_aaa">';
+                                '<span class="modal_tip_aaa">标签：';
                                 for (var j = 0; j < redata[i].works_tags.length; j++) {
-                                    str += '<a href="#" class="modal_tip_aaa">#' + redata[i].works_tags[j] + ' </a>';
+                                    str += '<a href="#" class="modal_tip_aaa">' + redata[i].works_tags[j] + ' </a>';
                                 }
                                 str += '</span><br><br><span class="modal_tip_aaa">浏览量：' + redata[i].works_browse + '</span>' +
                                 '</div>' +
